--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,11 +7,11 @@
 }
 
 .container{
-	margin-left: 120px;
-	margin-right: 120px;
+	margin: 0 auto;
 	padding-left: 30px;
 	padding-right: 30px;
 	background-color: #fff;
+	width: 1300px;
 }
 
 body {
@@ -106,6 +106,12 @@ nav ul li a:hover{
 	font-weight: bold;
 }
 
+nav ul li:hover > a{
+background-color: #5b9bd9;
+color: white;
+font-weight: bold;
+}
+
 nav ul li ul{  
     display: none;
     position: absolute;
@@ -175,11 +181,62 @@ section h2{
 section a{
 	color: black;
 	text-decoration: underline;
+	font-size: 18px;
 }
 
 section a:hover{
     text-decoration: none;
     font-weight: bold;
+}
+
+section ul li{
+	font-size: 18px;
+}
+
+section ol li{
+	font-size: 18px;
+}
+
+table{
+    font-family: "Raleway","Calibri","Helvetica Neue",Helvetica,Arial,sans-serif;
+    border-collapse: collapse;
+    width: 100%;  
+}
+
+.stundenplan{
+	border: none;
+	width: 100%;
+}
+
+
+.stundenplan td, th{
+	border: none;
+	text-align: center;
+	padding: 8px;
+}
+
+.ferien{
+    width: 25%;
+} 
+
+.ferien td, th{
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+}
+
+.offnung{
+	width: 25%;
+}
+
+.offnung td, th{
+	border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+}
+
+#kommentar{
+margin-top: 15px;
 }
 
 /* Fusszeile */
@@ -245,4 +302,197 @@ section div#vergleich{
 	border-radius: 8px;
 	background-color: #CAE0CC;
 	padding: 5px;
+}
+
+section div#schule{
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.schule{
+	box-sizing: border-box;
+}
+
+.schule:first-child{
+	width: 60%;
+	padding-right: 20px;
+}
+
+.schule:last-child{
+	padding-left: 20px;
+	width: 40%;
+}
+
+section div#aula{
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.aula{
+	box-sizing: border-box;
+}
+
+.aula:first-child{
+	width: 75%;
+	padding-right: 20px;
+}
+
+.aula:last-child{
+	padding-left: 20px;
+	width: 25%;
+}
+
+section div#dublin{
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.dublin{
+	box-sizing: border-box;
+}
+
+.dublin:first-child{
+	width: 20%;
+}
+
+.dublin:last-child{
+	width: 80%;
+	padding-left: 20px;
+}
+
+section div#kontakt{
+	display: flex;
+	flex: wrap;
+}
+
+.kontakt{
+	box-sizing: border-box;
+}
+
+.kontakt:first-child{
+	width: 50%;
+}
+
+.kontakt:last-child{
+	width: 50%;
+	padding-left: 20px;
+}
+
+.datenunter{
+	padding-left: 20px;
+}
+
+/* Screens */
+@media screen and (min-width: 700px) {
+	
+}
+
+/* Small Screens */
+@media screen and (max-width: 700px) {
+	
+
+}
+
+/* Print Screen */
+@media print{
+	#header{
+		display: block;
+	}
+	
+	header img{
+		display: none;
+	}
+	
+	nav{
+		display:none;
+	}
+	
+	footer{
+		display:none;
+	}
+	
+	body {
+		font-family: Georgia, serif;
+	}
+	
+	#titelbild{
+		display: none;
+	}
+	
+	.container{
+		width: 100%;
+		margin-left: -10px;
+	}
+	
+	section div h1{
+		color: black;
+	}
+	
+	/* Home */
+	
+	#vergleich{
+		width: 100%;
+	}
+	
+	.vergleich:first-child{
+		width: 100%;
+	}
+	
+	.vergleich:last-child{
+		width: 100%;
+	}
+	
+	/* Schule */
+	
+	#schule{
+		display:block;
+	}
+	
+	.schule:first-child{
+		width: 100%;
+		padding-bottom: 10px;
+	}
+	
+	/* Kontakt */
+	
+	#karte{
+		display: none;
+	}
+	
+	/* Aula und Verpflegung */
+	
+	#aula{
+		display: block:
+	}
+	
+	.aula:first-child{
+		width: 100%;
+		padding-bottom: 10px;
+	}
+	
+	/* Modulbaukasten */ 
+	
+	
+	/* Modulrückmeldungen */ 
+	
+	
+	/* Praktika */ 
+	
+	#dublin{
+		display: block;
+	}
+	
+	.dublin:last-child{
+		padding-top: 10px;
+		margin-left: -20px;
+		width: 100%;
+	}
+	
+	/* Schülerbereich */
+	
+}
+
+@page {
+  margin-top: 1cm;
+  margin-bottom: 1cm;
 }
