--- a/stylesheet.css
+++ b/stylesheet.css
@@ -342,6 +342,11 @@ section div#aula{
 	width: 25%;
 }
 
+.aula img{
+	border: 5px solid #5b9bd9;
+	border-radius: 50px 0 50px 0;
+}
+
 section div#dublin{
 	display: flex;
 	flex-wrap: wrap;
@@ -352,12 +357,40 @@ section div#dublin{
 }
 
 .dublin:first-child{
-	width: 20%;
+	width: 80%;
 }
 
 .dublin:last-child{
-	width: 80%;
+	width: 20%;
 	padding-left: 20px;
+}
+
+.dublin img{
+	border: 5px solid #5b9bd9;
+	border-radius: 50px 0 50px 0;
+}
+
+section div#module{
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.module{
+	box-sizing: border-box;
+}
+
+.module:first-child{
+	width: 80%;
+}
+
+.module:last-child{
+	width: 20%;
+	padding-left: 20px;
+}
+
+.module img{
+	border: 5px solid #5b9bd9;
+	border-radius: 50px 0 50px 0;
 }
 
 section div#kontakt{
